# strange-attractor-visualiser

./: .gitignore  README.md  attractors.py  main.py  plot.py  pyproject.toml
.streamlit/: config.toml
src/strange_attractor_visualiser/attractors/: aizawa.py  arneodo.py  burke_shaw.py  dadras.py  halvorsen.py  lorenz.py  lorenz84.py  newton_leipnik.py  registry.py  rossler.py  rucklidge.py  thomas.py  three_scroll.py  wang_sun.py
src/strange_attractor_visualiser/core/: models.py  solver.py
src/strange_attractor_visualiser/ui/: figure.py  plot_page.py  sidebar.py  theme.css  theme.py
tests/: test_attractor_config.py  test_plot_helpers.py  test_solver.py
