[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "strange-attractor-visualiser"
version = "0.1.0"
description = "Streamlit app for exploring strange attractors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "numpy",
  "scipy",
  "plotly",
]
[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.14",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.environment]
root = ["./src"]

[tool.ruff]
src = ["src", "tests"]
